Added A* functionality, but vector issue persists

--- a/Framework/AI/AI.vcxproj
+++ b/Framework/AI/AI.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Inc\AStar.h" />
     <ClInclude Include="Inc\BFS.h" />
     <ClInclude Include="Inc\AI.h" />
     <ClInclude Include="Inc\Common.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Src\pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Src\AStar.cpp" />
     <ClCompile Include="Src\BFS.cpp" />
     <ClCompile Include="Src\DFS.cpp" />
     <ClCompile Include="Src\Dijkstra.cpp" />
